Files restructuring
