# openapi/openapi.yaml
@@ -2,43 +2,6 @@
 openapi: 3.1.0
 components:
   schemas:
-    AddNodeRequest:
-      type: object
-      properties:
-        sphereId:
-          type: integer
-          format: int64
-        parentNodeId:
-          type: integer
-          format: int64
-        nodes:
-          type: array
-          items:
-            $ref: "#/components/schemas/NodeAddDTO"
-    AddNodeResponse:
-      type: object
-      properties:
-        nodes:
-          type: array
-          items:
-            $ref: "#/components/schemas/AddedNodeDTO"
-    AddedNodeDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        parentId:
-          type: integer
-          format: int64
-        name:
-          type: string
-        type:
-          $ref: "#/components/schemas/NodeType"
-        clientId:
-          type: string
-        uploadURL:
-          type: string
     CreateSphereRequest:
       type: object
       required:
@@ -74,51 +37,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/SphereListInfoDTO"
-    LoginRequest:
-      type: object
-      required:
-      - email
-      - password
-      properties:
-        email:
-          type: string
-          pattern: \S
-        password:
-          type: string
-          pattern: \S
-    LoginResponse:
-      type: object
-      required:
-      - accessToken
-      properties:
-        accessToken:
-          type: string
-    NodeAddDTO:
-      type: object
-      properties:
-        name:
-          type: string
-        type:
-          $ref: "#/components/schemas/NodeType"
-        fileClientId:
-          type:
-          - string
-          - "null"
-        fileSize:
-          type:
-          - integer
-          - "null"
-          format: int64
-        fileContentType:
-          type:
-          - string
-          - "null"
-        folderChildren:
-          type:
-          - array
-          - "null"
-          items:
-            $ref: "#/components/schemas/NodeAddDTO"
     NodeDownloadUrlResponse:
       type: object
       properties:
@@ -149,26 +67,6 @@ components:
       enum:
       - FILE
       - FOLDER
-    SignupRequest:
-      type: object
-      required:
-      - username
-      - email
-      - password
-      properties:
-        username:
-          type: string
-          pattern: \S
-          minLength: 3
-        email:
-          type: string
-          pattern: \S
-        password:
-          type: string
-          pattern: \S
-          minLength: 6
-    SignupResponse:
-      type: object
     SphereListInfoDTO:
       type: object
       properties:
@@ -193,7 +91,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/LoginRequest"
+              type: object
         required: true
       responses:
         "200":
@@ -201,7 +99,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LoginResponse"
+                type: object
         "401":
           description: Invalid credentials
           content:
@@ -251,7 +149,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/SignupRequest"
+              type: object
         required: true
       responses:
         "200":
@@ -259,7 +157,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SignupResponse"
+                type: object
         "409":
           description: Email or username already exists
           content:
@@ -289,7 +187,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/AddNodeRequest"
+              type: object
         required: true
       responses:
         "201":
@@ -297,7 +195,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AddNodeResponse"
+                type: object
         "401":
           description: Not Authorized
         "403":
