# src/main/java/io/github/skybby15/allround/DTO/Authentication/LoginRequest.java
@@ -1,6 +1,0 @@
-package io.github.skybby15.allround.DTO.Authentication;
-
-import jakarta.validation.constraints.Email;
-import jakarta.validation.constraints.NotBlank;
-
-public record LoginRequest(@Email @NotBlank String email, @NotBlank String password) {}
