# src/main/java/io/github/skybby15/allround/DTO/Authentication/Signup/SignupResponse.java
@@ -1,0 +1,6 @@
+package io.github.skybby15.allround.DTO.Authentication.Signup;
+
+import lombok.Builder;
+
+@Builder
+public record SignupResponse() {}
