# src/main/java/io/github/skybby15/allround/Resource/AuthenthicationResource.java
@@ -1,11 +1,11 @@
 package io.github.skybby15.allround.Resource;
 
 import io.github.skybby15.allround.DTO.Authentication.AuthenticationResult;
-import io.github.skybby15.allround.DTO.Authentication.LoginRequest;
-import io.github.skybby15.allround.DTO.Authentication.LoginResponse;
 import io.github.skybby15.allround.DTO.Authentication.RefreshTokenResponse;
-import io.github.skybby15.allround.DTO.Authentication.SignupRequest;
-import io.github.skybby15.allround.DTO.Authentication.SignupResponse;
+import io.github.skybby15.allround.DTO.Authentication.Login.LoginRequest;
+import io.github.skybby15.allround.DTO.Authentication.Login.LoginResponse;
+import io.github.skybby15.allround.DTO.Authentication.Signup.SignupRequest;
+import io.github.skybby15.allround.DTO.Authentication.Signup.SignupResponse;
 import io.github.skybby15.allround.DTO.ErrorResponse;
 import io.github.skybby15.allround.Service.AuthenticationService;
 import jakarta.annotation.security.PermitAll;
