# src/main/java/io/github/skybby15/allround/Resource/NodeResource.java
@@ -5,10 +5,10 @@ import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
 
-import io.github.skybby15.allround.DTO.Node.AddNodeRequest;
-import io.github.skybby15.allround.DTO.Node.AddNodeResponse;
 import io.github.skybby15.allround.DTO.Node.NodeDownloadUrlResponse;
 import io.github.skybby15.allround.DTO.Node.NodeInfoResponse;
+import io.github.skybby15.allround.DTO.Node.Add.AddNodeRequest;
+import io.github.skybby15.allround.DTO.Node.Add.AddNodeResponse;
 import io.github.skybby15.allround.Service.NodeService;
 import io.quarkus.security.Authenticated;
 import jakarta.inject.Inject;
